--- a/html/sass/styles.scss
+++ b/html/sass/styles.scss
@@ -448,4 +448,28 @@ footer{
     width: 100%;
   }
 }
+
+.text-img .img-6x{
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  grid-gap: 9px 12px;
+  align-content: center;
+  img{
+    width: calc(33.33% - 8px);
+    height: 185px;
+    border-radius: 12px;
+  }
+  img:nth-child(2), img:nth-child(5){
+    position: relative;
+    top: 15px;
+  }
+}
+.text-img .no-border{
+  border-radius: 0;
+  width: auto;
+  justify-content: flex-end;
+  align-items: flex-start;
+  height: auto;
+}
 /*------------------------END-LADING-PAGE------------------------*/
