--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -425,6 +425,37 @@ footer {
     border: none;
     width: 100%; }
 
+.text-img .img-6x {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  grid-gap: 9px 12px;
+  -ms-flex-line-pack: center;
+      align-content: center; }
+  .text-img .img-6x img {
+    width: calc(33.33% - 8px);
+    height: 185px;
+    border-radius: 12px; }
+  .text-img .img-6x img:nth-child(2), .text-img .img-6x img:nth-child(5) {
+    position: relative;
+    top: 15px; }
+
+.text-img .no-border {
+  border-radius: 0;
+  width: auto;
+  -webkit-box-pack: end;
+      -ms-flex-pack: end;
+          justify-content: flex-end;
+  -webkit-box-align: start;
+      -ms-flex-align: start;
+          align-items: flex-start;
+  height: auto; }
+
 /*------------------------END-LADING-PAGE------------------------*/
 
 /*# sourceMappingURL=styles.css.map */
