--- a/html/css/styles.css
+++ b/html/css/styles.css
@@ -457,5 +457,48 @@ footer {
   height: auto; }
 
 /*------------------------END-LADING-PAGE------------------------*/
+/*------------------------THANK-PAGE------------------------*/
+.thank {
+  padding: 88px 0 100px;
+  position: relative; }
+  .thank .bg {
+    top: 121px;
+    background: #c4cfc6; }
+  .thank h1 {
+    font-size: 56px;
+    font-weight: 500;
+    line-height: 64px;
+    letter-spacing: -1.6px;
+    text-align: center;
+    margin-bottom: 40px; }
+  .thank .content {
+    margin: auto;
+    border-radius: 16px;
+    background: white;
+    width: 465px;
+    padding: 83px 57px;
+    max-width: 100%; }
+  .thank p {
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 24px;
+    letter-spacing: 0;
+    text-align: center;
+    margin-bottom: 25px; }
+  .thank p:last-child {
+    margin-bottom: 0; }
+  .thank h6 {
+    font-size: 16px;
+    font-weight: 600;
+    line-height: 24px;
+    letter-spacing: 0;
+    text-align: center;
+    margin-bottom: 23px;
+    color: #99446b; }
+
+.bg-white {
+  background: #fff; }
+
+/*-----------------------END-THANK-PAGE------------------------*/
 
 /*# sourceMappingURL=styles.css.map */
