--- a/html/sass/responsive.scss
+++ b/html/sass/responsive.scss
@@ -121,4 +121,14 @@
   .text-img .img-6x img{
     height: 30vw;
   }
+  .thank h1{
+    font-size: 40px;
+    line-height: 1.2;
+  }
+  .thank{
+    padding: 75px 0 75px;
+  }
+  .thank .bg {
+    top: 100px;
+  }
 }
