--- a/html/sass/responsive.scss
+++ b/html/sass/responsive.scss
@@ -96,6 +96,10 @@
   .text-img .img-6x img{
     height: 150px;
   }
+  .page-banner figure img{
+    width: 100%;
+    height: auto;
+  }
 }
 
 @media (max-width:575px) {
