--- a/html/sass/styles.scss
+++ b/html/sass/styles.scss
@@ -465,7 +465,7 @@ footer{
     top: 15px;
   }
 }
-.text-img .no-border{
+.text-img .no-border img{
   border-radius: 0;
   width: auto;
   justify-content: flex-end;
