--- a/html/sass/styles.scss
+++ b/html/sass/styles.scss
@@ -522,4 +522,10 @@ footer{
 .bg-white{
   background: #fff;
 }
+.pre-footer{
+  padding-bottom: 150px;
+}
+footer{
+  padding-bottom: 2px;
+}
 /*-----------------------END-THANK-PAGE------------------------*/
